// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-564"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-568 makeStyles-root-565 makeStyles-root-567"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-578 makeStyles-input-566"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-584 makeStyles-noShrink-585"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-38 MuiBox-root-39"
  >
    <p
      className="MuiTypography-root-42 MuiTypography-body1-44"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-38 MuiBox-root-72"
    />
  </div>,
  <div
    className="MuiBox-root-38 MuiBox-root-73"
  >
    <p
      className="MuiTypography-root-42 MuiTypography-body1-44"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-38 MuiBox-root-74"
    />
  </div>,
  <div
    className="MuiBox-root-38 MuiBox-root-75"
  >
    <p
      className="MuiTypography-root-42 MuiTypography-body1-44"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-38 MuiBox-root-76"
    />
  </div>,
  <div
    className="MuiBox-root-38 MuiBox-root-77"
  >
    <p
      className="MuiTypography-root-42 MuiTypography-body1-44"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-38 MuiBox-root-78"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="makeStyles-root-79"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-84 MuiBox-root-85"
>
  <div
    className="MuiBox-root-84 MuiBox-root-86"
  >
    <h4
      className="MuiTypography-root-89 MuiTypography-h4-97 MuiTypography-colorPrimary-112 makeStyles-inline-87"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-89 MuiTypography-h4-97 makeStyles-inline-87"
    >

      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-84 MuiBox-root-119"
  >
    <h6
      className="MuiTypography-root-89 MuiTypography-h6-99"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-84 MuiBox-root-120"
  />
  <div
    className="MuiBox-root-84 MuiBox-root-121"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-122"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-127 MuiBox-root-128"
  >
    <label
      className="MuiFormControlLabel-root-129"
    >
      <span
        className="MuiSwitch-root-135"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-157 MuiIconButton-root-148 MuiPrivateSwitchBase-root-144 MuiSwitch-switchBase-136 MuiSwitch-colorPrimary-137"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-156"
          >
            <span
              className="MuiSwitch-thumb-142"
            />
            <input
              className="MuiPrivateSwitchBase-input-147 MuiSwitch-input-141"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-143"
        />
      </span>
      <span
        className="MuiTypography-root-160 MuiTypography-body1-162 MuiFormControlLabel-label-134"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-127 MuiBox-root-190"
  >
    <label
      className="MuiFormControlLabel-root-129"
    >
      <span
        className="MuiSwitch-root-135"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-157 MuiIconButton-root-148 MuiPrivateSwitchBase-root-144 MuiSwitch-switchBase-136 MuiSwitch-colorPrimary-137"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-156"
          >
            <span
              className="MuiSwitch-thumb-142"
            />
            <input
              className="MuiPrivateSwitchBase-input-147 MuiSwitch-input-141"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-143"
        />
      </span>
      <span
        className="MuiTypography-root-160 MuiTypography-body1-162 MuiFormControlLabel-label-134"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-284 MuiBox-root-285"
  >
    <div
      className="MuiBox-root-284 MuiBox-root-286"
    >
      <div
        className="MuiBox-root-284 MuiBox-root-287"
      >
        <button
          className="MuiButtonBase-root-305 MuiButton-root-288 MuiButton-contained-296 MuiButton-containedPrimary-297"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-289"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-310 MuiTypography-body1-312"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-310 MuiTypography-body2-311 MuiPaper-root-351 MuiPaper-elevation6-359 MuiSnackbarContent-root-348 makeStyles-info-342"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-349"
        >
          <div
            className="MuiBox-root-284 MuiBox-root-378 makeStyles-message-346"
          >
            <div
              className="makeStyles-iconBackground-347"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-379"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-310 MuiTypography-subtitle1-321 makeStyles-info-342"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-350"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-305 MuiIconButton-root-384 MuiIconButton-colorSecondary-389"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-392"
            >
              <img
                alt="Close"
                className="makeStyles-root-379"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-284 MuiBox-root-393"
    >
      <div
        className="MuiBox-root-284 MuiBox-root-394"
      >
        <button
          className="MuiButtonBase-root-305 MuiButton-root-288 MuiButton-contained-296 MuiButton-containedPrimary-297"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-289"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-310 MuiTypography-body1-312"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-310 MuiTypography-body2-311 MuiPaper-root-351 MuiPaper-elevation6-359 MuiSnackbarContent-root-348 makeStyles-warning-343"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-349"
        >
          <div
            className="MuiBox-root-284 MuiBox-root-395 makeStyles-message-346"
          >
            <div
              className="makeStyles-iconBackground-347"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-379"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-310 MuiTypography-subtitle1-321 makeStyles-warning-343"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-350"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-305 MuiIconButton-root-384 MuiIconButton-colorSecondary-389"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-392"
            >
              <img
                alt="Close"
                className="makeStyles-root-379"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-284 MuiBox-root-396"
    >
      <div
        className="MuiBox-root-284 MuiBox-root-397"
      >
        <button
          className="MuiButtonBase-root-305 MuiButton-root-288 MuiButton-contained-296 MuiButton-containedPrimary-297"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-289"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-310 MuiTypography-body1-312"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-310 MuiTypography-body2-311 MuiPaper-root-351 MuiPaper-elevation6-359 MuiSnackbarContent-root-348 makeStyles-error-341"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-349"
        >
          <div
            className="MuiBox-root-284 MuiBox-root-398 makeStyles-message-346"
          >
            <div
              className="makeStyles-iconBackground-347"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-379"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-310 MuiTypography-subtitle1-321 makeStyles-error-341"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-350"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-305 MuiIconButton-root-384 MuiIconButton-colorSecondary-389"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-392"
            >
              <img
                alt="Close"
                className="makeStyles-root-379"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-201 MuiBox-root-202"
  >
    <div
      className="makeStyles-container-204"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-207"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-201 MuiBox-root-212"
  >
    <p
      className="MuiTypography-root-215 MuiTypography-body1-217 makeStyles-inline-213"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-204"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-207"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-247 MuiTypography-h4-255"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-247 MuiTypography-h5-256"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-h6-257"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-247 MuiTypography-body1-249"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-247 MuiTypography-body2-248"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle2-259"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle1-258 MuiTypography-colorPrimary-270"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle2-259 MuiTypography-colorPrimary-270 makeStyles-inline-245"
  >
    First part of the text.
  </h6>,
  <h6
    className="MuiTypography-root-247 MuiTypography-subtitle2-259 makeStyles-inline-245"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-410 MuiFormControl-marginNormal-411 MuiTextField-root-409"
  >
    <label
      className="MuiFormLabel-root-426 MuiInputLabel-root-414 MuiInputLabel-formControl-420 MuiInputLabel-animated-423 MuiInputLabel-shrink-422"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-446 MuiOutlinedInput-root-433 MuiInputBase-formControl-447"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-462 MuiOutlinedInput-notchedOutline-440"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-463"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-456 MuiOutlinedInput-input-441"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-464 MuiBox-root-465"
  >
    <div
      className="makeStyles-dropdown-466"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-446 makeStyles-root-467 makeStyles-root-469"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-456 makeStyles-input-468"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-470 makeStyles-noShrink-471"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-492 MuiButtonBase-disabled-493 MuiButton-root-475 MuiButton-contained-483 MuiButton-containedPrimary-484 MuiButton-disabled-487"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-476"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-495 MuiBox-root-496"
>
  <div
    className="MuiBox-root-495 MuiBox-root-497"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-499 MuiFormControl-marginNormal-500 MuiTextField-root-498"
      >
        <label
          className="MuiFormLabel-root-515 MuiFormLabel-error-518 MuiInputLabel-error-506 MuiInputLabel-root-503 MuiInputLabel-formControl-509 MuiInputLabel-animated-512 MuiInputLabel-shrink-511"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-535 MuiOutlinedInput-root-522 MuiInputBase-error-541 MuiOutlinedInput-error-527 MuiInputBase-formControl-536"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-551 MuiOutlinedInput-notchedOutline-529"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-552"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-545 MuiOutlinedInput-input-530"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-553 MuiFormHelperText-contained-557 MuiFormHelperText-error-554"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-495 MuiBox-root-561"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-499 MuiFormControl-marginNormal-500 MuiTextField-root-498"
      >
        <label
          className="MuiFormLabel-root-515 MuiInputLabel-root-503 MuiInputLabel-formControl-509 MuiInputLabel-animated-512 MuiInputLabel-shrink-511"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-535 MuiOutlinedInput-root-522 MuiInputBase-formControl-536"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-551 MuiOutlinedInput-notchedOutline-529"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-552"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-545 MuiOutlinedInput-input-530"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-495 MuiBox-root-562"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-499 MuiFormControl-marginNormal-500 MuiTextField-root-498"
      >
        <label
          className="MuiFormLabel-root-515 MuiFormLabel-disabled-517 MuiInputLabel-disabled-505 MuiInputLabel-root-503 MuiInputLabel-formControl-509 MuiInputLabel-animated-512 MuiInputLabel-shrink-511"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-535 MuiOutlinedInput-root-522 MuiInputBase-disabled-538 MuiOutlinedInput-disabled-524 MuiInputBase-formControl-536"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-551 MuiOutlinedInput-notchedOutline-529"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-552"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-545 MuiOutlinedInput-input-530 MuiInputBase-disabled-538 MuiOutlinedInput-disabled-524"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-495 MuiBox-root-563"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-499 MuiFormControl-marginNormal-500 MuiTextField-root-498"
      >
        <label
          className="MuiFormLabel-root-515 MuiInputLabel-root-503 MuiInputLabel-formControl-509 MuiInputLabel-animated-512 MuiInputLabel-shrink-511"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-535 MuiOutlinedInput-root-522 MuiInputBase-formControl-536"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-551 MuiOutlinedInput-notchedOutline-529"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-552"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-545 MuiOutlinedInput-input-530"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-589 MuiBox-root-590"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-593 MuiTypography-h4-601 MuiTypography-colorPrimary-616 makeStyles-inline-591"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-593 MuiTypography-h4-601 makeStyles-inline-591"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-589 MuiBox-root-623"
  />
  <form
    onSubmit={[Function]}
  >
    <div
      className="makeStyles-dropdown-624"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-628 makeStyles-root-625 makeStyles-root-627"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-638 makeStyles-input-626"
          name="SELECT_FIELD_ATTR"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-644 makeStyles-noShrink-645"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </form>
  <div
    className="MuiBox-root-589 MuiBox-root-649"
  />
  <div
    className="MuiBox-root-589 MuiBox-root-650"
  >
    <div
      className="MuiBox-root-589 MuiBox-root-651"
    >
      This is the block where we show accounts and bns name
    </div>
    <div
      className="MuiBox-root-589 MuiBox-root-652"
    >
      This is the block where we show balances
    </div>
    <div
      className="MuiBox-root-589 MuiBox-root-653"
    >
      This is the block where we show QR Code
    </div>
    <div
      className="MuiBox-root-589 MuiBox-root-654"
    >
      This is the block where we show links
    </div>
  </div>
  <div
    className="MuiBox-root-589 MuiBox-root-655"
  />
  <div
    className="MuiBox-root-589 MuiBox-root-656"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-644"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-664 MuiBox-root-665"
  id="/login"
>
  <div
    className="MuiBox-root-664 MuiBox-root-666"
  >
    <h4
      className="MuiTypography-root-669 MuiTypography-h4-677 MuiTypography-colorPrimary-692 makeStyles-inline-667"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-669 MuiTypography-h4-677 makeStyles-inline-667"
    >

      In
    </h4>
  </div>
  <div
    className="MuiBox-root-664 MuiBox-root-699"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-664 MuiBox-root-700"
      >
        <div
          className="MuiFormControl-root-702 MuiFormControl-marginNormal-703 MuiFormControl-fullWidth-705 MuiTextField-root-701"
        >
          <div
            className="MuiInputBase-root-719 MuiOutlinedInput-root-706 MuiInputBase-fullWidth-728 MuiInputBase-formControl-720"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-735 MuiOutlinedInput-notchedOutline-713"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-736"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-729 MuiOutlinedInput-input-714"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-664 MuiBox-root-737"
      >
        <div
          className="MuiBox-root-664 MuiBox-root-738"
        >
          <button
            className="MuiButtonBase-root-756 MuiButtonBase-disabled-757 MuiButton-root-739 MuiButton-contained-747 MuiButton-containedPrimary-748 MuiButton-disabled-751 MuiButton-fullWidth-755"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-740"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-664 MuiBox-root-759"
    >
      <div
        className="MuiBox-root-664 MuiBox-root-760"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-669 MuiTypography-subtitle2-681 MuiTypography-colorPrimary-692 makeStyles-inline-667 makeStyles-link-668"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-664 MuiBox-root-761"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-669 MuiTypography-subtitle2-681 MuiTypography-colorPrimary-692 makeStyles-inline-667 makeStyles-link-668"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-664 MuiBox-root-762"
  />
  <div
    className="MuiBox-root-664 MuiBox-root-763"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-764"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-799 MuiBox-root-800"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-769 MuiBox-root-771"
  >
    <h4
      className="MuiTypography-root-774 MuiTypography-h4-782 MuiTypography-colorPrimary-797 makeStyles-inline-772"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-774 MuiTypography-h4-782 makeStyles-inline-772"
    >

      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-769 MuiBox-root-804"
  >
    <div
      className="MuiBox-root-799 MuiBox-root-835"
    >
      <h6
        className="MuiTypography-root-804 MuiTypography-subtitle2-816"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-799 MuiBox-root-836"
    >
      <h6
        className="MuiTypography-root-804 MuiTypography-subtitle2-816 MuiTypography-colorPrimary-827 makeStyles-inline-802"
      >
        Get PDF button placement
      </h6>
    </div>
    <div
      className="MuiBox-root-799 MuiBox-root-837"
    >
      <p
        className="MuiTypography-root-804 MuiTypography-body1-806 makeStyles-inline-802"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-799 MuiBox-root-838"
    >
      <div
        className="MuiBox-root-799 MuiBox-root-839"
      >
        <button
          className="MuiButtonBase-root-857 MuiButton-root-840 MuiButton-text-842 MuiButton-textPrimary-843 MuiButton-fullWidth-856"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-841"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-799 MuiBox-root-860"
  />
  <div
    className="MuiBox-root-799 MuiBox-root-861"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-862"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-877 MuiBox-root-878"
  id="/signup1"
>
  <div
    className="MuiBox-root-877 MuiBox-root-879"
  >
    <h4
      className="MuiTypography-root-882 MuiTypography-h4-890 MuiTypography-colorPrimary-905 makeStyles-inline-880"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-882 MuiTypography-h4-890 makeStyles-inline-880"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-877 MuiBox-root-912"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-877 MuiBox-root-913"
      >
        <div
          className="MuiFormControl-root-915 MuiFormControl-marginNormal-916 MuiFormControl-fullWidth-918 MuiTextField-root-914"
        >
          <label
            className="MuiFormLabel-root-931 MuiFormLabel-required-936 MuiInputLabel-required-923 MuiInputLabel-root-919 MuiInputLabel-formControl-925 MuiInputLabel-animated-928 MuiInputLabel-shrink-927"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-937 MuiInputLabel-asterisk-924"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-951 MuiOutlinedInput-root-938 MuiInputBase-fullWidth-960 MuiInputBase-formControl-952"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-967 MuiOutlinedInput-notchedOutline-945"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-968"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-961 MuiOutlinedInput-input-946"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-877 MuiBox-root-969"
      >
        <div
          className="MuiFormControl-root-915 MuiFormControl-marginNormal-916 MuiFormControl-fullWidth-918 MuiTextField-root-914"
        >
          <label
            className="MuiFormLabel-root-931 MuiFormLabel-required-936 MuiInputLabel-required-923 MuiInputLabel-root-919 MuiInputLabel-formControl-925 MuiInputLabel-animated-928 MuiInputLabel-shrink-927"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-937 MuiInputLabel-asterisk-924"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-951 MuiOutlinedInput-root-938 MuiInputBase-fullWidth-960 MuiInputBase-formControl-952"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-967 MuiOutlinedInput-notchedOutline-945"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-968"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-961 MuiOutlinedInput-input-946"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-877 MuiBox-root-970"
      >
        <div
          className="MuiFormControl-root-915 MuiFormControl-marginNormal-916 MuiFormControl-fullWidth-918 MuiTextField-root-914"
        >
          <label
            className="MuiFormLabel-root-931 MuiFormLabel-required-936 MuiInputLabel-required-923 MuiInputLabel-root-919 MuiInputLabel-formControl-925 MuiInputLabel-animated-928 MuiInputLabel-shrink-927"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-937 MuiInputLabel-asterisk-924"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-951 MuiOutlinedInput-root-938 MuiInputBase-fullWidth-960 MuiInputBase-formControl-952"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-967 MuiOutlinedInput-notchedOutline-945"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-968"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-961 MuiOutlinedInput-input-946"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-877 MuiBox-root-971"
      >
        <div
          className="MuiBox-root-877 MuiBox-root-972"
        >
          <button
            className="MuiButtonBase-root-990 MuiButton-root-973 MuiButton-text-975 MuiButton-textPrimary-976 MuiButton-fullWidth-989"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-974"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-877 MuiBox-root-993"
        >
          <button
            className="MuiButtonBase-root-990 MuiButtonBase-disabled-991 MuiButton-root-973 MuiButton-contained-981 MuiButton-containedPrimary-982 MuiButton-disabled-985 MuiButton-fullWidth-989"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-974"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-877 MuiBox-root-994"
  />
  <div
    className="MuiBox-root-877 MuiBox-root-995"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-996"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1011 MuiBox-root-1012"
  id="/signup2"
>
  <div
    className="MuiBox-root-1011 MuiBox-root-1013"
  >
    <h4
      className="MuiTypography-root-1016 MuiTypography-h4-1024 MuiTypography-colorPrimary-1039 makeStyles-inline-1014"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1016 MuiTypography-h4-1024 makeStyles-inline-1014"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1011 MuiBox-root-1046"
  >
    <div
      className="MuiBox-root-1011 MuiBox-root-1047"
    >
      <div
        className="MuiBox-root-1011 MuiBox-root-1048"
      >
        <div
          className="MuiBox-root-1011 MuiBox-root-1049"
        >
          <h6
            className="MuiTypography-root-1016 MuiTypography-subtitle2-1028 makeStyles-inline-1014"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1051"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1054"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1059"
      >
        <span
          className="MuiSwitch-root-1065"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1087 MuiIconButton-root-1078 MuiPrivateSwitchBase-root-1074 MuiSwitch-switchBase-1066 MuiSwitch-colorPrimary-1067"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1086"
            >
              <span
                className="MuiSwitch-thumb-1072"
              />
              <input
                className="MuiPrivateSwitchBase-input-1077 MuiSwitch-input-1071"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1073"
          />
        </span>
        <span
          className="MuiTypography-root-1016 MuiTypography-body1-1018 MuiFormControlLabel-label-1064"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1011 MuiBox-root-1090"
    >
      <p
        className="MuiTypography-root-1016 MuiTypography-body1-1018 makeStyles-inline-1014"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-1011 MuiBox-root-1091"
    >
      <div
        className="MuiBox-root-1011 MuiBox-root-1092"
      >
        <button
          className="MuiButtonBase-root-1087 MuiButton-root-1093 MuiButton-text-1095 MuiButton-textPrimary-1096 MuiButton-fullWidth-1109"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1094"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1011 MuiBox-root-1110"
      >
        <button
          className="MuiButtonBase-root-1087 MuiButton-root-1093 MuiButton-contained-1101 MuiButton-containedPrimary-1102 MuiButton-fullWidth-1109"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1094"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1011 MuiBox-root-1111"
  />
  <div
    className="MuiBox-root-1011 MuiBox-root-1112"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1054"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1123 MuiBox-root-1124"
  id="/signup3"
>
  <div
    className="MuiBox-root-1123 MuiBox-root-1125"
  >
    <h4
      className="MuiTypography-root-1128 MuiTypography-h4-1136 MuiTypography-colorPrimary-1151 makeStyles-inline-1126"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1128 MuiTypography-h4-1136 makeStyles-inline-1126"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1123 MuiBox-root-1158"
  >
    <h6
      className="MuiTypography-root-1128 MuiTypography-subtitle1-1139 makeStyles-inline-1126"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1123 MuiBox-root-1159"
      >
        <div
          className="MuiFormControl-root-1161 MuiFormControl-marginNormal-1162 MuiFormControl-fullWidth-1164 MuiTextField-root-1160"
        >
          <div
            className="MuiInputBase-root-1178 MuiOutlinedInput-root-1165 MuiInputBase-fullWidth-1187 MuiInputBase-formControl-1179"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1194 MuiOutlinedInput-notchedOutline-1172"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1195"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1188 MuiOutlinedInput-input-1173"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1123 MuiBox-root-1196"
      >
        <div
          className="MuiBox-root-1123 MuiBox-root-1197"
        >
          <button
            className="MuiButtonBase-root-1215 MuiButton-root-1198 MuiButton-text-1200 MuiButton-textPrimary-1201 MuiButton-fullWidth-1214"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1199"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1123 MuiBox-root-1218"
        >
          <button
            className="MuiButtonBase-root-1215 MuiButton-root-1198 MuiButton-contained-1206 MuiButton-containedPrimary-1207 MuiButton-fullWidth-1214"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1199"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1123 MuiBox-root-1219"
  />
  <div
    className="MuiBox-root-1123 MuiBox-root-1220"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1221"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1236 MuiBox-root-1237"
  id="/welcome"
>
  <div
    className="MuiBox-root-1236 MuiBox-root-1238"
  >
    <h4
      className="MuiTypography-root-1241 MuiTypography-h4-1249 MuiTypography-colorPrimary-1264 makeStyles-inline-1239"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1241 MuiTypography-h4-1249 makeStyles-inline-1239"
    >

      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1236 MuiBox-root-1271"
  >
    <p
      className="MuiTypography-root-1241 MuiTypography-body1-1243 makeStyles-inline-1239"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1236 MuiBox-root-1272"
    />
    <button
      className="MuiButtonBase-root-1290 MuiButton-root-1273 MuiButton-contained-1281 MuiButton-containedPrimary-1282 MuiButton-fullWidth-1289"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1274"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1236 MuiBox-root-1293"
    />
    <button
      className="MuiButtonBase-root-1290 MuiButton-root-1273 MuiButton-contained-1281 MuiButton-containedPrimary-1282 MuiButton-fullWidth-1289"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1274"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1236 MuiBox-root-1294"
    />
    <button
      className="MuiButtonBase-root-1290 MuiButton-root-1273 MuiButton-contained-1281 MuiButton-containedPrimary-1282 MuiButton-fullWidth-1289"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1274"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1236 MuiBox-root-1295"
  />
  <div
    className="MuiBox-root-1236 MuiBox-root-1296"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1297"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
